Make long witness text break

--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -110,7 +110,7 @@
                 @foreach (var witness in Model.TransactionDetail.Witnesses)
                 {
                     <div class="column is-2 p-0">Witness</div>
-                    <div class="column is-10 p-0">
+                    <div class="column is-10 p-0 break-all-text">
                         @witness
                     </div>
                 }
