--- a/src/Tippy/Pages/Transactions/Index.cshtml
+++ b/src/Tippy/Pages/Transactions/Index.cshtml
@@ -44,8 +44,22 @@
         </tbody>
     </table>
 
+    <div class="my-2">@Model.Result.Count tx(s) for block @Model.ToBlock - @Model.FromBlock. </div>
+
     <nav class="pagination is-centered" role="navigation" aria-label="pagination">
-        <a class="pagination-next">More(TODO)</a>
+        @{
+            int previous = Model.FromBlock + 1;
+            int next = Model.ToBlock > 1 ? Model.ToBlock - 1 : 0;
+        }
+        @if (previous < (int)Model.TipBlockNumber)
+        {
+            <a asp-page="./Index" asp-route-toBlock="@previous" class="pagination-previous">Previous</a>
+        }
+        @if (Model.ToBlock > 1)
+        {
+            <a asp-page="./Index" asp-route-fromBlock="@next" class="pagination-next">Next</a>
+        }
+        <ul class="pagination-list"></ul>
     </nav>
 }
 else
