Implement address tx list pagination

--- a/src/Tippy/Pages/Transactions/_Transaction.cshtml
+++ b/src/Tippy/Pages/Transactions/_Transaction.cshtml
@@ -4,6 +4,7 @@
 
 @foreach(var tx in Model)
 {
+    <div class="tx">
     <hr />
 
     <div style="border-bottom:solid 1px #808080;" class="py-2 my-2">
@@ -64,4 +65,6 @@
             }
         </div>
     </div>
+    </div>
 }
+
