Add 20px padding to main content bottom

--- a/src/Tippy/Pages/Addresses/Details.cshtml
+++ b/src/Tippy/Pages/Addresses/Details.cshtml
@@ -93,7 +93,7 @@
     <div id="txs">Loading...</div>
 </div>
 
-<nav class="pagination is-centered mb-4" role="navigation" aria-label="pagination">
+<nav class="pagination is-centered" role="navigation" aria-label="pagination">
     <a class="pagination-previous" style="display: none;">Previous</a>
     <a class="pagination-next" style="display: none;">Next</a>
     <ul class="pagination-list"></ul>
